Logical types are now supported by fast-avro in version 1.9+